# atlas-test

./: .gitmodules  CMakeLists.txt
cmake/: FindSDL2.cmake
data/shaders/: main.fs  main.vs
src/: application.cpp  application.hpp  config.hpp  main.cpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp
src/GL/: gl3w.c  gl3w.h  glcorearb.h
